--- a/style.css
+++ b/style.css
@@ -238,6 +238,36 @@ label {
     .player__items{
         position: fixed;
         width: 100%;
+        padding: 10px;
         height: 100%;
+    }
+    .player__items .player,
+    .player__items .stop{
+        margin: 0px;
+        flex: 0 1 5%;
+        padding: 0px;
+        font-size: 14px;
+    }
+    .player__items .stop{
+        flex: 0 1 10px;
+        height: 10px;
+        margin: 0px;
+        padding: 0px;
+    }
+    i{
+        font-size: 10px;
+    }
+    .volume__items{
+        flex 0 1 20%;
+        margin-right: 30px;
+    }
+    .timeout{
+        font-size: 12px;
+        flex: 0 1 10%;
+        overflow: hidden;
+    }
+    .firstX__coords, .lastX__coords{
+        display: none;
+        visibility: hidden;
     }
 }
