--- a/style.css
+++ b/style.css
@@ -258,7 +258,7 @@ label {
         font-size: 10px;
     }
     .volume__items{
-        flex 0 1 20%;
+        flex: 0 1 20%;
         margin-right: 30px;
     }
     .timeout{
